--- a/public/login.html
+++ b/public/login.html
@@ -1,3 +1,4 @@
+<!-- basic boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,16 +7,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+<!-- this links to our style sheet in Public folder stylesheets folder -->
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <!-- this is the start of the navbar -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
     </div>
   </nav>
+  <!-- end of the navbar -->
+  <!-- here we have a container with labels that will ask for email && PS with a login button -->
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -32,11 +37,13 @@
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
+        <!-- or they can just sign by clicking this a tag -->
         <p>Or sign up <a href="/">here</a></p>
       </div>
     </div>
   </div>
 
+  <!-- this lets us render JS and links the login.js file found in JS folder "Public" -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
 
