--- a/public/members.html
+++ b/public/members.html
@@ -1,3 +1,4 @@
+<!-- basic boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,10 +7,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+  <!-- this links to our style sheet in Public folder stylesheets folder -->
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <!-- this is the start of the navbar -->
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -19,6 +22,8 @@
     </div>
   </div>
 </nav>
+<!-- end of the navbar -->
+<!-- here we have a container that welcomes the member when they get to the page -->
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -27,6 +32,7 @@
     </div>
   </div>
 
+ <!-- this lets us render JS and links the members.js file found in JS folder "Public" -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
