--- a/public/signup.html
+++ b/public/signup.html
@@ -1,3 +1,4 @@
+<!-- basic boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,16 +7,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+  <!-- this links to our style sheet in Public folder stylesheets folder -->
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <!-- this is the start of the navbar -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
     </div>
   </nav>
+   <!-- end of the navbar -->
+   <!-- here we have a container with labels that will ask for email && PS in order to sign up to be a member. also a sign up button -->
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -33,14 +38,17 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
+          <!-- SIGN UP BUTTON HERE -->
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
+        <!-- or if you are already a user -->
         <p>Or log in <a href="/login">here</a></p>
       </div>
     </div>
   </div>
 
+   <!-- this lets us render JS and links the signup.js file found in JS folder "Public" -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
 
